--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,4 +3,10 @@ on: push
 jobs:
  test:
   runs-on: ubuntu-latest
-    steps:
+  steps:
+    - name: Get repository code
+      uses: actions/checkout@v3
+    - name: Install dependences
+      run: npm ci
+    - name: Test application
+      run: npm run test
